# Eduardo_Tejada_embarcatech_HBr_2025

./: README.md
projetos/BitDorme/: README.md
projetos/BitDorme/assets/: Logo_BitDorme.xbm  dados.txt  gerar_graficos.py
projetos/BitDorme/src/: BitDorme.c  CMakeLists.txt
projetos/BitDorme/src/inc/: Buzzer.c  Buzzer.h  joystick.c  joystick.h  matriz_leds.c  matriz_leds.h  microphone_dma.c  microphone_dma.h  wifi_lib.c
projetos/unit-1/Arquitetura_modular/: CMakeLists.txt
projetos/unit-1/Arquitetura_modular/app/: main.c
projetos/unit-1/Arquitetura_modular/drivers/: led_embutido.c
projetos/unit-1/Arquitetura_modular/hal/: hal_led.c  hal_led.h
projetos/unit-1/Countdown_counter/: CMakeLists.txt  Countdown_counter.c  README.md
projetos/unit-1/Reading_joystick/: CMakeLists.txt  README.md  Reading_joystick.c
projetos/unit-1/Reading_joystick/inc/: Display_Oled.h
projetos/unit-1/Temperature_Monitor/: CMakeLists.txt  README.md  Temperature_Monitor.c
projetos/unit-1/Teste_unitario/: CMakeLists.txt  Teste_unitario.c
projetos/unit-1/Teste_unitario/inc/: Display_Oled.c
